@@ -60,6 +60,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #21057: TextIOWrapper now allows the underlying binary stream's
+  read() or read1() method to return an arbitrary bytes-like object
+  (such as a memoryview).  Patch by Nikolaus Rath.
+
 - Issue #20951: SSLSocket.send() now raises either SSLWantReadError or
   SSLWantWriteError on a non-blocking socket if the operation would block.
   Previously, it would return 0.  Patch by Nikolaus Rath.
